Opened 12 years ago
Closed 8 years ago
#9380 closed bug (fixed)
Rescanning a folder leads to crash in the end
Reported by: | humdinger | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/DiskUsage | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev45105.
- Open DiskUsage and scan a volume
- Right-click on some folder and do a "Rescan" of it
-> All outer circle segments disappear.
- Either click the "Rescan" button or quit the app
-> crash
The backtrace (complete report attached):
0x7807ccfc 0x58d881 debugger + 0x39 0x7807cd2c 0x5998a0 __assert_fail + 0x4c 0x7807cd6c 0x60b4d2 BPrivate::processHeap::free(void*) + 0x5e 0x7807cd9c 0x60cbdf free + 0xab 0x7807cdd4 0x58b977 operator delete(void) + 0x1f 0x7807ce04 0x21c839 _._8FileInfo + 0xad 0x7807ce34 0x21cdd9 _._14VolumeSnapshot + 0x25 0x7807cee4 0x21b984 Scanner::_RunScan(FileInfo*) + 0x660 0x7807cf14 0x21b01d Scanner::MessageReceived(BMessage*) + 0x45 0x7807cf44 0x31201d BLooper::DispatchMessage(BMessage*, BHandler*) + 0x59 0x7807cf84 0x313947 BLooper::task_looper() + 0x203 0x7807cfb4 0x313539 BLooper::_task0_(void*) + 0x3d 0x7807cfdc 0x5921d1 thread_entry + 0x21 00000000 0x7807cfec ?
Attachments (1)
Change History (2)
by , 12 years ago
Attachment: | DiskUsage-9721-debug-19-01-2013-09-11-20.report added |
---|
Note:
See TracTickets
for help on using tickets.
crash after rescanning a folder