DiskUsage: avoid different crashes on rescan

* Fixes #9380, #11442.