src/apps/diskusage/Scanner.cpp
@@ -177,7 +177,10 @@ Scanner::_RunScan(FileInfo* startInfo)
 
 		fSnapshot->currentDir = NULL;
 
+		delete fPreviousSnapshot;
 	} else {
+		off_t previousVolumeCapacity = fSnapshot->capacity;
+		off_t previousVolumeFreeBytes = fSnapshot->freeBytes;
 		fSnapshot->capacity = fVolume->Capacity();
 		fSnapshot->freeBytes = fVolume->FreeBytes();
 		stringScan.ReplaceFirst("%refName%", startInfo->ref.name);
@@ -193,8 +196,8 @@ Scanner::_RunScan(FileInfo* startInfo)
 			vector<FileInfo *>::iterator i = parent->children.begin();
 			FileInfo* newInfo = _GetFileInfo(&startDir, parent);
 			if (newInfo == NULL) {
-				delete fSnapshot;
-				fSnapshot = fPreviousSnapshot;
+				fSnapshot->capacity = previousVolumeCapacity;
+				fSnapshot->freeBytes = previousVolumeFreeBytes;
 				fBusy = false;
 				fListener.SendMessage(&fDoneMessage);
 				return;				
@@ -206,13 +209,17 @@ Scanner::_RunScan(FileInfo* startInfo)
 			parent->children[idx] = newInfo;
 
 			// Fixup count and size fields in parent directory.
-			parent->size += newInfo->size - startInfo->size;
-			parent->count += newInfo->count - startInfo->count;
+			off_t sizeDiff = newInfo->size - startInfo->size;
+			off_t countDiff = newInfo->count - startInfo->count;
+			while (parent != NULL) {
+				parent->size += sizeDiff;
+				parent->count += countDiff;
+				parent = parent->parent;
+			}
 
 			delete startInfo;
 		}
 	}
-	delete fPreviousSnapshot;
 	fBusy = false;
 	_ChangeToDesired();
 	fListener.SendMessage(&fDoneMessage);
